--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -99,6 +99,16 @@ body{
     transform:translate(0);
   }
 }
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform:translateY();
+  }
+}
 
 .btn:link,
 .btn:visited{
@@ -108,6 +118,12 @@ body{
   display: inline-block;
   border-radius:100px;
   transition: all .2s;
+  position:relative;
+}
+
+.btn-animated{
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
 }
 
 .btn:hover {
@@ -123,4 +139,26 @@ body{
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn::after {
+  content: "";
+  display:inline-block;
+  height:100%;
+  width:100%;
+  border-radius:100px;
+  position: absolute;
+  top:0px;
+  left:0px;
+  z-index:-1;
+  transition: all .4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform:scaleX(1.4) scaleY(1.6);
+  opacity:0;
 }
